Fix z-index and overlay for drawer

--- a/app/_sass/_global.sass
+++ b/app/_sass/_global.sass
@@ -100,6 +100,7 @@ code
   top: 0
   bottom: 0
   left: -300px
+  z-index: 2
   width: 300px
   background: $cplain
   transition: left .4s
@@ -134,11 +135,12 @@ code
   transition: opacity 0.3s
 
   .drawer-nav-open &
-    position: absolute
+    position: fixed
     top: 0
     bottom: 0
     left: 0
     right: 0
+    z-index: 1
     display: block
     opacity: .8
 
