--- a/app/_sass/_post.sass
+++ b/app/_sass/_post.sass
@@ -7,7 +7,6 @@
   font-weight: 300
   font-family: $serif
   background-color: $cbg
-  box-shadow: 0 4px 4px #222
 
   .inner
     width: 800px
